deleted attributes redundant attributes at get api/news api/asks
